<resources>
    <string name="app_name">WorkRec</string>
    <string name="getStarted">Get Started</string>
    <string name="title">Check-In</string>
    <color name="colourOne">#FFA500</color>
    <color name="colourTwo">#000000</color>
    <color name="colourText">#fffacd</color>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <color name="greyBackground">#CCF5F5F5</color>
    <color name="whiteString">#FFFFFF</color>
    <color name="colourThree">#00FFFF</color>
    <string name="login">Login</string>
    <string name="forgotPass">Forgot Password?</string>
    <string name="createAcc">Create Account</string>
    <string name="alreadyHaveAnAccount">Already Have an Account?</string>
    <string name="noAcc">Create an Account</string>
    <string name="title_activity_timesheet">Timesheet</string>
    <string name="searchForReportButton">Search</string>
    <string name="searchForReportHint">Day of the Month</string>
    <string-array name="position">
        <item>Employee</item>
        <item>Manager</item>
    </string-array>
    <string name="title_activity_discussion_home">discussion_home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <!--    issa's stuff-->
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu">Menu</string>
    <string name="log_out">Logout</string>
    <string name="discussiontxt">Discussion</string>
    <string name="descImg">TODO</string>
    <string name="timesheettxt">Timesheet</string>
    <string name="reporttxt">Report</string>
    -
    <string name="goRight">
-<![CDATA[>]]>
</string>
    -
    <string name="goRight2">

-<![CDATA[>]]>
</string>
    <string name="clock_in">Clock In</string>
    <string name="clock_out">Clock out</string>
    <string name="not_clocked_in">Not Clocked In</string>
    <string name="date">Date</string>
    <string name="clock_in_time">Clock In Time</string>
    <string name="clock_out_time">Clock Out Time</string>
    <string name="submit">Submit</string>
    <string name="total_hours">Total Hours</string>
    <string name="clockedOutText">Clocked out</string>
    <string name="view_schedule">View Schedule</string>
    <string name="help">Help</string>
    <string name="timesheet_help">
        Tap the clock in button to clock in.\nTo clock out tap the clock out button.\n\nThe app will automatically store your time record.\n\n
        To add a sick day, tap the sick face on the Toolbar. Tap submit when you\'re ready to submit to firebase.\n\n
        Timesheet activity developed by: Jacob Hessian
    </string>
    <string name="add_a_sick_day">Add a sick day:</string>
    <string name="add_sick_day">Add Sick Day</string>
    <string name="yyyy_mm_dd">yyyy/MM/dd</string>
</resources>