<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image_2"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".SignUp">

    <ImageView
        android:id="@+id/imgIcon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:transitionName="icon"/>

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUp"
        android:textColor="@color/whiteString"
        android:textSize="40sp"
        android:fontFamily="serif"
        android:layout_marginTop="-20dp"
        android:transitionName="page_purpose"/>

    <TextView
        android:id="@+id/pgHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Please Enter the Following Details"
        android:textStyle="bold"
        android:textSize="17sp"
        android:textColor="@color/whiteString"
        android:fontFamily="serif-monospace"
        android:transitionName="page_hint"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical"
        android:background="@color/greyBackground">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fullName"
            android:transitionName="fullName_trans">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="Full Name"
                android:textColorHint="@color/colourTwo"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="vertical"
        android:background="@color/greyBackground">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/userName"
            android:transitionName="user_trans">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="Email Address"
                android:textColorHint="@color/colourTwo"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/greyBackground">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            app:passwordToggleEnabled="true"
            android:transitionName="pass_trans">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="Password (Minimum of 6 characters)"
                android:textColorHint="@color/colourTwo"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/createB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_background_2"
        android:text="@string/createAcc"
        android:textColor="@color/whiteString"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="serif-monospace"
        android:transitionName="create_trans"
        />

    <Button
        android:id="@+id/signInB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_background_2"
        android:text="@string/alreadyHaveAnAccount"
        android:textColor="@color/whiteString"
        android:textSize="19sp"
        android:textStyle="bold"
        android:fontFamily="serif-monospace"
        android:transitionName="signIn_trans"/>
</LinearLayout>